@@ -26,6 +26,7 @@ Rename recup_samedi to comp_time
 Fixe a warning when a day planning is empty
 Correct use of PresentSet class in planning/poste/index
 Fix saving status and services in agent's form
+handle single perso_id when adding absences
 
 *** Version 19.10.00       (2019-10-31)   ***
 - Enhancements
